--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,9 @@
   </head>
   <body>
     <noscript>
-        Super Simple Stock Market is powered by JavaScript. You need to enable JavaScript to run this app.
+      Super Simple Stock Market is powered by JavaScript. You need to enable
+      JavaScript to run this app.
     </noscript>
-    <div id="root"/></div>
+    <div id="root"></div>
   </body>
 </html>
